Correccion de error
Se corrigio error en stream en EditarSuministro.